Upgrade dev serving, implemented inertia on the scroll, update the example to include vertical scroll.

--- a/example/app.css
+++ b/example/app.css
@@ -7,16 +7,23 @@ body,
 .example {
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
 .example__scroll {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
   width: 500px;
   height: 500px;
+}
+
+.example__scroll--vertical {
+  overflow-y: scroll;
+}
+
+.example__scroll--horizontal {
+  flex-direction: column;
   overflow-x: scroll;
 }
 
